--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.datasource.hikari.idleTimeout=30000
 spring.datasource.hikari.poolName=SpringBootHikariCP
 spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.connectionTimeout=30000
+
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=500KB
+
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=500KB
