--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.datasource.hikari.idleTimeout=30000
 spring.datasource.hikari.poolName=SpringBootHikariCP
 spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.connectionTimeout=30000
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=src/main/resources/static/uploads
+#max file and request size
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=11MB
+
+
